# boxnet

./: BUILDING  CMakeLists.txt  Doxyfile  README.md
doc/: CMakeLists.txt  Doxyfile.in  how_to_use.txt.c
include/: boxnet.h
src/: CMakeLists.txt  boxnet.c
